@@ -269,7 +269,7 @@ largefilemode=full
 line-end.shortcut=END
 line-home.shortcut=HOME
 logo.icon.medium=32x32/apps/isabelle.gif
-lookAndFeel=javax.swing.plaf.metal.MetalLookAndFeel
+lookAndFeel=com.formdev.flatlaf.FlatLightLaf
 match-bracket.shortcut2=C+9
 metal.primary.font=Isabelle DejaVu Sans
 metal.primary.fontsize=12
